--- a/styles.css
+++ b/styles.css
@@ -475,7 +475,6 @@ body {
 #auth-wrapper #auth-modal .tos-text a:hover {
   color: #66bb6a; /* Dark mode --hover-link-color */
 }
-
 /* Make sure the new desktop nav is hidden by default (on mobile) */
 .desktop-nav {
   display: none; 
@@ -2806,7 +2805,7 @@ document.querySelectorAll('.color-circle').forEach(circle => {
 
 .profile-icon-container span {
   font-size: 12px;
-  font-weight: 500;
+
   color: #666;
 }
 
@@ -2941,13 +2940,16 @@ document.querySelectorAll('.color-circle').forEach(circle => {
   font-size: 0.85rem;
   color: #888;
 }
-
+.profile-info {
+  color: var(--text-color);
+}
 /* Mobile adjustments (optional) */
 @media (max-width: 768px) {
   #profile-page-photo {
     width: 60px;
     height: 60px;
   }
+
   .profile-info h2 {
     font-size: 1.4rem;
   }
@@ -3387,9 +3389,7 @@ body.nav-expanded .full-page {
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.close-filter-popup:hover {
-  color: #f44336;
-}
+
 
 /* Filter Content */
 .filter-content {
@@ -4831,7 +4831,7 @@ color: var(--text-color);
   flex: 1;
   text-align: center;
   padding: 0.5rem;
-  background-color: var(--bg-color);
+  background-color: var(--card-bg);
   color: var(--text-color);
   
   font-weight: 600;
@@ -4904,17 +4904,14 @@ color: var(--text-color);
   font-size: 12px;             /* smaller font size */
   font-weight: normal;         /* keeps text subtle */
   color: #ccc;                 /* subdued text color */
-  background-color: #2a2a2a;   /* dark background */
+  background-color: var(--card-bg);   /* dark background */
   border: none;
   border-radius: 20px;         /* pill shape */
   cursor: pointer;
   transition: background-color 0.2s ease, color 0.2s ease;
 }
 
-.view-all-btn:hover {
-  background-color: #3a3a3a;   /* slightly lighter on hover */
-  color: #fff;                 /* text becomes white on hover */
-}
+
 
 .transaction-subtitle {
   font-size: 0.85rem;
@@ -5275,10 +5272,7 @@ color: var(--text-color);
   
   
   
-  .search-bar-container:focus-within {
-    border-color: #4caf50;
-    box-shadow: 0 2px 6px rgba(76, 175, 80, 0.3);
-  }
+
   
   .clear-button {
     background: transparent;
@@ -5291,9 +5285,7 @@ color: var(--text-color);
     border-radius: 50%;
   }
   
-  .clear-button:hover {
-    color: #4caf50;
-  }
+ 
   
 
 
@@ -5312,7 +5304,7 @@ color: var(--text-color);
   border: none;
   border-radius: 25px;
  
-  background-color: var(--tab-bg, #f0f0f0);
+  background-color: var(--card-bg);
   color: var(--text-color, #555);
   font-size: 16px;
           /* Use text variable */
@@ -6304,4 +6296,5 @@ html {
 }
 /* ========== DARK MODE VARIABLES ========== */
 /* Start with everything hidden except a loading spinner */
+
 
